# chrisdoescoding.com

./: .gitignore  Dockerfile  Pipfile  README.md  build.sh  build_old.sh  deploy.sh  envs  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  start.sh  start_prod  test.sh
chrisdoescoding/: factories.py  manage.py  mypy.ini  wsgi.py
chrisdoescoding/acnh/: apps.py  urls.py
chrisdoescoding/acnh/templates/: index.html
chrisdoescoding/config/: urls.py
chrisdoescoding/config/settings/: common.py  local.py  prod.py
chrisdoescoding/posts/: admin.py  factories.py  feed.py  models.py  tests.py  urls.py  utils.py  views.py
chrisdoescoding/posts/migrations/: 0001_initial.py  0002_auto_20180304_2232.py  0003_auto_20180304_2236.py  0004_post_excerpt.py
chrisdoescoding/posts/scripts/: southpark.json
chrisdoescoding/posts/templates/: 404.html  all_posts_view.html  base.html  base_footer.html  base_header.html  base_view.html  detail_view.html  latest_post_view.html  list_view.html  listview.html  post_navigation.html  postview.html  single_post_view.html
chrisdoescoding/posts/tests/: test_bootstrap.py  test_views.py
chrisdoescoding/southpark/: urls.py  views.py
chrisdoescoding/southpark/scripts/: get_southpark_data.py
chrisdoescoding/southpark/templates/: southpark.html
config/: urls.py  wsgi.py
config/settings/: common.py  local.py  prod.py
docs/: apache.md  api_structure.md  file_structure.md  linode.md
server/nginx/: nginx.conf  update_config_and_restart_nginx.sh
server/scripts/: backup.sh  build.sh
server/web/: migrate_db.sh  run_container.sh
(+40 files in other folders)
