[tool.poetry]
name = "chrisdoescoding.com"
version = "1.1.0"
description = "\"ChrisDoesCoding.com\""
authors = ["Christopher Cordero <ccordero@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
psycopg2-binary = "^2.8"
requests = "^2.22"
py-gfm = "^0.1.4"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
mypy = "^0.711.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
