[tool.poetry]
name = "chrisdoescoding.com"
version = "1.5.1"
description = "\"ChrisDoesCoding.com\""
authors = ["Christopher Cordero <ccordero@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3"
psycopg2-binary = "^2.8"
requests = "^2.22"
py-gfm = "^0.1.4"
gunicorn = "^19.9"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
mypy = "0.760"
flake8 = "^3.7"
django-extensions = "^2.1"
factory_boy = "^2.12"
isort = "^4.3"
black = "19.10b0"
django-stubs = "1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
